--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ultimate-web-app-boilerplate",
+  "name": "production-ready-webapp-boilerplate",
   "version": "1.0.0",
-  "description": "Ultimate web app boilerplate",
+  "description": "Production ready webapp boilerplate",
   "main": "src/server/index.js",
   "author": "Nguyen Hao <hao.ict56@gmail.com>",
   "license": "MIT",
