[ci skip] update circle-ci to run only on master for test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,10 @@ workflows:
 
   test-build-deploy:
     jobs:
-      - test
+      - test:
+          branches:
+            only:
+              - master
       - build:
           requires:
             - test
